# OpenCV_demo

./: CMakeLists.txt  README.md  image_receiver.cpp  image_sender.cpp  main.cpp  network_helper.hpp
